test/positive/feature_booleanliterals.java

public class feature_booleanliterals {
  public feature_booleanliterals() {}
  protected boolean x = false;
}

