test/negative/InstanceOfNull.java
public class InstanceOfNull {
    public InstanceOfNull() {
        boolean a = (this instanceof null);
    }
}
